--- a/index.html
+++ b/index.html
@@ -74,84 +74,145 @@
     <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
         <!-- Slide 1 -->
         <div id="slide1" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
-            <!-- text content -->
-            <div class="space-y-7 flex-1">
-              <h2 class="text-6xl font-bold">
-                Ride-on R15 V4 <br />
-                with Smile
-              </h2>
-              <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-              </p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
+            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+                <!-- text content -->
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-6xl font-bold">
+                        Ride-on R15 V4 <br />
+                        with Smile
+                    </h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                        amet sint. Velit officia consequat duis enim velit mollit.
+                    </p>
+                    <button class="btn bg-bike-primary text-white">Purchase</button>
+                </div>
+                <!-- image content -->
+                <div class="flex-1">
+                    <img src="./images/slider/bike1.png" class="w-[400px]" />
+                </div>
             </div>
-            <!-- image content -->
-            <div class="flex-1">
-              <img src="./images/slider/bike1.png" class="w-[400px]" />
+            <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
             </div>
-          </div>
-          <div
-            class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
-          >
-            <a href="#slide3" class="btn btn-circle">❮</a>
-            <a href="#slide2" class="btn btn-circle">❯</a>
-          </div>
         </div>
         <!-- Slide 2 -->
         <div id="slide2" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
-            <!-- text content -->
-            <div class="space-y-7 flex-1">
-              <h2 class="text-6xl font-bold">
-                Ride-on R15 V4 <br />
-                with Smile
-              </h2>
-              <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-              </p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
+            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+                <!-- text content -->
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-6xl font-bold">
+                        Ride-on R15 V4 <br />
+                        with Smile
+                    </h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                        amet sint. Velit officia consequat duis enim velit mollit.
+                    </p>
+                    <button class="btn bg-bike-primary text-white">Purchase</button>
+                </div>
+                <!-- image content -->
+                <div class="flex-1">
+                    <img src="./images/slider/bike2.png" class="w-[400px]" />
+                </div>
             </div>
-            <!-- image content -->
-            <div class="flex-1">
-              <img src="./images/slider/bike2.png" class="w-[400px]" />
+            <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle">❮</a>
+                <a href="#slide3" class="btn btn-circle">❯</a>
             </div>
-          </div>
-          <div
-            class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
-          >
-            <a href="#slide1" class="btn btn-circle">❮</a>
-            <a href="#slide3" class="btn btn-circle">❯</a>
-          </div>
         </div>
         <!-- Slide 3 -->
         <div id="slide3" class="carousel-item relative w-full">
-          <div class="flex flex-col lg:flex-row p-12 lg:p-24">
-            <!-- text content -->
-            <div class="space-y-7 flex-1">
-              <h2 class="text-6xl font-bold">
-                Ride-on R15 V4 <br />
-                with Smile
-              </h2>
-              <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-              </p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
+            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+                <!-- text content -->
+                <div class="space-y-7 flex-1">
+                    <h2 class="text-6xl font-bold">
+                        Ride-on R15 V4 <br />
+                        with Smile
+                    </h2>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                        amet sint. Velit officia consequat duis enim velit mollit.
+                    </p>
+                    <button class="btn bg-bike-primary text-white">Purchase</button>
+                </div>
+                <!-- image content -->
+                <div class="flex-1">
+                    <img src="./images/slider/bike3.png" class="w-[400px]" />
+                </div>
             </div>
-            <!-- image content -->
-            <div class="flex-1">
-              <img src="./images/slider/bike3.png" class="w-[400px]" />
+            <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle">❮</a>
+                <a href="#slide1" class="btn btn-circle">❯</a>
             </div>
-          </div>
-          <div
-            class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
-          >
-            <a href="#slide2" class="btn btn-circle">❮</a>
-            <a href="#slide1" class="btn btn-circle">❯</a>
-          </div>
         </div>
-      </div>
-    </header>
+    </div>
+</header>
+<!-- Main Section -->
+<main class="md:container mx-auto">
+    <!-- featured bike section - Homework -->
+    <section></section>
+
+    <!-- Latest Bike Section -->
+    <section class="my-24">
+        <h3 class="text-5xl font-bold text-center mb-12">Latest Bikes</h3>
+        <!-- cards -->
+        <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
+            <!-- card 1 -->
+            <div class="card bg-base-100 shadow-xl">
+                <figure>
+                    <img src="./images/others/latest1.png" alt="Shoes" />
+                </figure>
+                <div class="card-body space-y-5">
+                    <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi lectus at.
+                    </p>
+                    <div class="card-actions">
+                        <button class="btn bg-bike-primary text-white">
+                            Read More
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- card 2 -->
+            <div class="card bg-base-100 shadow-xl">
+                <figure>
+                    <img src="./images/others/latest2.png" alt="Shoes" />
+                </figure>
+                <div class="card-body space-y-5">
+                    <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi lectus at.
+                    </p>
+                    <div class="card-actions">
+                        <button class="btn bg-bike-primary text-white">
+                            Read More
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- card 3 -->
+            <div class="card bg-base-100 shadow-xl">
+                <figure>
+                    <img src="./images/others/latest3.png" alt="Shoes" />
+                </figure>
+                <div class="card-body space-y-5">
+                    <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                        fermentum amet faucibus sed id nisi lectus at.
+                    </p>
+                    <div class="card-actions">
+                        <button class="btn bg-bike-primary text-white">
+                            Read More
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
