--- a/index.html
+++ b/index.html
@@ -215,4 +215,80 @@
             </div>
         </div>
     </section>
-    
+    <!-- FAQ Section -->
+    <section class="my-24">
+        <h3 class="text-5xl font-bold text-center mb-12">
+            Frequently Asked <span class="text-bike-primary">Questions</span>
+        </h3>
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row">
+                <img src="./images/others/faq.png" class="w-full rounded-lg shadow-2xl" />
+                <div class="space-y-5">
+                    <div class="collapse collapse-arrow border border-blue-100">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">
+                            What are the most important things I should know about riding
+                            a bike?
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                Safety First! Always obey the rules of the road. Obey all
+                                traffic signals, signs, and laws. Get in the mindset of
+                                “driving” your bike—not just “riding” your bike. This will
+                                help you be a more focused and legally compliant bike rider.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-blue-100">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">
+                            What are the most important things I should know about.
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                “driving” your bike—not just “riding” your bike. This will
+                                help you be a more focused and legally compliant bike rider.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-blue-100">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">
+                            help you be a more focused and legally compliant bike rider.
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                This will help you be a more focused and legally compliant
+                                bike rider.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-blue-100">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">
+                            help you be a more focused and legally compliant bike rider.
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                This will help you be a more focused and legally compliant
+                                bike rider.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border border-blue-100">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">
+                            help you be a more focused and legally compliant bike rider.
+                        </div>
+                        <div class="collapse-content">
+                            <p>
+                                This will help you be a more focused and legally compliant
+                                bike rider.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
