Completed the project

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         with Smile
                     </h2>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                        amet sint. Velit officia consequat duis enim velit mollit.
+                        The Yamaha R15-V4 combines stunning design, advanced technology, and impressive performance,
+                        making it a perfect sporty, stylish ride.
                     </p>
                     <button class="btn bg-bike-primary text-white">Purchase</button>
                 </div>
@@ -107,8 +107,8 @@
                         with Smile
                     </h2>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                        amet sint. Velit officia consequat duis enim velit mollit.
+                        The Yamaha R15-V4 combines stunning design, advanced technology, and impressive performance,
+                        making it a perfect sporty, stylish ride.
                     </p>
                     <button class="btn bg-bike-primary text-white">Purchase</button>
                 </div>
@@ -132,8 +132,8 @@
                         with Smile
                     </h2>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                        amet sint. Velit officia consequat duis enim velit mollit.
+                        The Yamaha R15-V4 combines stunning design, advanced technology, and impressive performance,
+                        making it a perfect sporty, stylish ride.
                     </p>
                     <button class="btn bg-bike-primary text-white">Purchase</button>
                 </div>
@@ -167,8 +167,8 @@
                 <div class="card-body space-y-5">
                     <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                        fermentum amet faucibus sed id nisi lectus at.
+                        The Ducati XDIAVEL S-73 blends raw power, sleek design, and luxurious comfort for ultimate
+                        cruising experience.
                     </p>
                     <div class="card-actions">
                         <button class="btn bg-bike-primary text-white">
@@ -185,8 +185,8 @@
                 <div class="card-body space-y-5">
                     <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                        fermentum amet faucibus sed id nisi lectus at.
+                        The Ducati XDIAVEL S-73 blends raw power, sleek design, and luxurious comfort for ultimate
+                        cruising experience.
                     </p>
                     <div class="card-actions">
                         <button class="btn bg-bike-primary text-white">
@@ -203,8 +203,8 @@
                 <div class="card-body space-y-5">
                     <h2 class="card-title">Ducati XDIAVEL S-73</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
-                        fermentum amet faucibus sed id nisi lectus at.
+                        The Ducati XDIAVEL S-73 blends raw power, sleek design, and luxurious comfort for ultimate
+                        cruising experience.
                     </p>
                     <div class="card-actions">
                         <button class="btn bg-bike-primary text-white">
